--- a/views/employees/new.ejs
+++ b/views/employees/new.ejs
@@ -44,6 +44,16 @@
     </div>
 
     <div class="form-group">
+        <label>
+            <input type="checkbox" name="exemptFromTracking" id="exemptFromTracking">
+            Exempt from Attendance Tracking
+        </label>
+        <small style="color: #666; display: block; margin-left: 24px;">
+            Skip arrival/departure checks and late notifications (e.g., for executives)
+        </small>
+    </div>
+
+    <div class="form-group">
         <label for="workHoursPerDay">Work Hours Per Day</label>
         <input type="number" name="workHoursPerDay" id="workHoursPerDay" value="8" min="1" max="12" required>
         <small style="color: #666;">Standard work hours (usually 8)</small>
