--- a/views/events/calendar.ejs
+++ b/views/events/calendar.ejs
@@ -6,6 +6,9 @@
         <a href="/events/calendar?year=<%= year - 1 %>" class="btn btn-secondary">&larr; <%= year - 1 %></a>
         <a href="/events/calendar" class="btn btn-secondary">Today</a>
         <a href="/events/calendar?year=<%= year + 1 %>" class="btn btn-secondary"><%= year + 1 %> &rarr;</a>
+        <% if (isAdmin) { %>
+            <a href="/events/calendar/export?year=<%= year %>" class="btn btn-success" style="margin-left: 10px;">📥 Download CSV</a>
+        <% } %>
     </div>
 </div>
 
