--- a/views/events/calendar.ejs
+++ b/views/events/calendar.ejs
@@ -7,7 +7,7 @@
         <a href="/events/calendar" class="btn btn-secondary">Today</a>
         <a href="/events/calendar?year=<%= year + 1 %>" class="btn btn-secondary"><%= year + 1 %> &rarr;</a>
         <% if (isAdmin) { %>
-            <a href="/events/calendar/export?year=<%= year %>" class="btn btn-success" style="margin-left: 10px;">📥 Download CSV</a>
+            <a href="/events/calendar/export?year=<%= year %>" class="btn btn-success" style="margin-left: 10px;">📥 Download Excel</a>
         <% } %>
     </div>
 </div>
